--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ci": "yarn check-ts && yarn test && yarn e2e && yarn build --progress false && yarn ssr",
     "testcafe": "npx testcafe -L",
     "cypress": "npx cypress open",
+    "playwright": "jest --colors --config e2e-app/jest.config.js",
     "schematics:lint": "tslint --project schematics/tsconfig.json",
     "schematics:build": "rimraf schematics/dist && tsc --project schematics/tsconfig.json",
     "schematics:tdd": "ts-node-dev --respawn --project misc/tsconfig.json node_modules/jasmine/bin/jasmine schematics/**/*.spec.ts",
@@ -96,6 +97,7 @@
     "@types/he": "^1.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.14",
     "@types/marked": "^0.6.5",
     "@types/node": "^12.11.1",
     "@types/prismjs": "1.16.0",
@@ -116,6 +118,8 @@
     "jasmine": "~3.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jest": "^26.4.2",
+    "jest-playwright-preset": "^1.3.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -127,11 +131,14 @@
     "ng-packagr": "^10.0.0",
     "ngx-build-plus": "^9.0.2",
     "nyc": "14.1.1",
+    "playwright": "^1.4.1",
+    "playwright-cli": "^0.5.2",
     "prismjs": "1.16.0",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "~6.5.5",
     "testcafe": "^1.8.1",
+    "ts-jest": "^26.4.0",
     "ts-loader": "^6.0.1",
     "ts-node": "~8.3.0",
     "ts-node-dev": "^1.0.0-pre.42",
